--- a/resources/scss/show.scss
+++ b/resources/scss/show.scss
@@ -678,3 +678,171 @@
         -o-transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 }
+
+.products{
+    width: 100%;
+    
+    .card-body{
+        display: flex;
+        flex-flow: wrap;
+    }
+
+    form{
+        width: 100%;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    input{
+        width: calc(100% - 60px);
+        padding: 0.8rem 0.75rem;
+        font-size: 0.875rem;
+        display: block;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #131920;
+        background-color: #ffffff;
+        background-clip: padding-box;
+        border: 1px solid #bec8d0;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border-radius: 8px;
+        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+        &:hover{
+            background-color: #f8f9fa;
+        }
+
+        &:active,
+        &:focus{
+            color: #131920;
+            background-color: #f8f9fa;
+            border-color: #FFBB00;
+            outline: 0;
+            box-shadow: 0 0 0 1px rgba(70,128,255, 0.1);
+        }
+    }
+
+    button{
+        width: 45px;
+        height: 45px;
+        font-size: 0.875rem;
+        font-weight: 700;
+        line-height: 1.5;
+        border-radius: 25px;
+        color: #ffffff;
+        border: none;
+        background-color: #FFBB00;
+        cursor: pointer;
+        display: flex;
+        align-items: center;        
+        justify-content: center;
+
+        svg{
+            stroke: #ffffff;
+        }
+    }
+
+    .listing{
+        width: 100%;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: space-between;
+        padding: 2rem;
+
+        h2{
+            font-size: 24px;
+            line-height: 37px;
+            color: #262626;
+            text-transform: uppercase;
+            margin: 0 0 .5rem;
+        }
+        
+        li{
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 400;
+            color: #616161;
+            margin: 0 0 .2rem;
+        }
+
+        .column{
+            width: 48%;
+            margin: 0 0 2rem;
+        }
+
+        .image{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+
+            img{
+                max-width: 400px;
+                object-fit: contain;
+            }
+        }
+
+        @media screen and (min-width: 768px) {
+            .column{
+                width: 48%;
+                margin: unset;
+            }
+        }
+    }
+}
+
+
+///////////////////////
+// INPUT DRAG & DROP //
+///////////////////////
+
+.file-drop-area {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 450px;
+  max-width: 100%;
+  padding: 25px;
+  border: 1px dashed var(--border-card-color);
+  border-radius: 3px;
+  transition: 0.2s;
+}
+
+.fake-btn {
+  flex-shrink: 0;
+  background-color: #f0f0f0;
+  border: 1px dashed var(--border-card-color);
+  border-radius: 3px;
+  padding: 8px 15px;
+  margin-right: 10px;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #565656;
+}
+
+.file-msg {
+  font-size: small;
+  font-weight: 300;
+  line-height: 1.4;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.file-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  opacity: 0;
+  &:focus {
+    outline: none;
+  }
+}
