feat: adicionado cadastro de usuario no distribuidor direto modulo super admin.

--- a/resources/scss/show.scss
+++ b/resources/scss/show.scss
@@ -351,6 +351,10 @@
     background-image: url(/images/delete.svg);
 }
 
+[data-button="user"]{
+    background-image: url(/images/user.svg);
+}
+
 [data-button="edit"]{
     background-image: url(/images/edit.svg);
 }
