--- a/resources/scss/helpers.scss
+++ b/resources/scss/helpers.scss
@@ -40,7 +40,7 @@ body{
 	--yellow-3: #E8852E;
 
 	--title-page-color: #131920;
-	--title-page-size: 30px;
+	--title-page-size: 20px;
 
 	// tab
 	--tab-link: #5b6b79;
@@ -52,6 +52,10 @@ body{
 	// border
 	--border-radius: 8px;
 	--border-card-color: #e7eaee;
+
+	@media screen and (min-width: 992px) {
+		--title-page-size: 30px;
+	}
 }
 
 /* container */
@@ -779,3 +783,11 @@ form.d-table-row{
 	color: #fff;
 }
   
+
+
+.warning{
+	font-size: 16px;
+	line-height: 24px;
+	font-family: var(--font);
+	color: var(--red);
+}
