--- a/resources/scss/login.scss
+++ b/resources/scss/login.scss
@@ -14,7 +14,6 @@
 
 .login{
     width: 100%;
-    height: 100%;
     min-height: 100vh;
     display: flex;
     flex-flow: wrap;
@@ -72,6 +71,14 @@
 
     .column{
         width: 50%;
+    }
+
+    @media screen and (max-width: 540px) {
+        padding: 8rem 0 4rem;
+
+        .column{
+            width: 100%;
+        }   
     }
 }
 
