--- a/resources/scss/show.scss
+++ b/resources/scss/show.scss
@@ -165,6 +165,10 @@
         background-repeat: no-repeat;
         background-position: center;
     }
+
+    @media screen and (max-width: 992px) {
+        width: calc(100% - 60px);
+    }
 }
 
 .form-input {
@@ -255,11 +259,24 @@
 
 .table{
 	width: 100%;
-	display: table;	
+	//display: table;	
 	vertical-align: top;
 	border-collapse: collapse;
 	border: 1px solid var(--border-card-color);
 	color: var(--title-page-color);
+    overflow-x: scroll;
+}
+
+@media screen and (min-width: 992px) {
+    .table{
+        display: inline-table;
+    }
+}
+
+@media screen and (min-width: 400px) {
+    .table-small{
+        display: inline-table;
+    }
 }
 
 .thead{
@@ -292,6 +309,8 @@
     border-right: 1px solid var(--border-card-color);
     font-family: var(--inter);
     font-weight: 500;
+    width: 2rem;
+    white-space: nowrap;
 }
 
 .td{
@@ -302,6 +321,8 @@
     border-bottom: 1px solid #e7eaee;
     position: relative;
     border-right: 1px solid #e7eaee;
+    width: 2rem;
+    white-space: nowrap;
 
     &:hover > .actions{
         opacity: 1;
@@ -590,6 +611,12 @@
     background-color: var(--white);
     border-radius: 8px;
     z-index: 1020;
+
+    @media screen and (max-width: 550px) {
+        width: 90%;
+        top: 20%;
+        left: 5%;
+    }
 }
 
 .modal-title{
@@ -804,25 +831,29 @@
     display: flex;
     flex-flow: wrap;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 1.5rem;
     margin: 0 0 2rem;
     border: 1px solid var(--border-card-color);
     border-radius: 8px;
 
     h2{
-        font-size: 24px;
-        line-height: 37px;
+        font-size: 20px;
+        line-height: 31px;
         color: #262626;
         text-transform: uppercase;
-        margin: 0 0 .5rem;
+        margin: 0 0 1rem;
     }
     
     li{
         font-size: 16px;
         line-height: 24px;
-        font-weight: 400;
+        font-weight: 300;
         color: #616161;
         margin: 0 0 .2rem;
+
+        strong{
+            font-weight: 500;
+        }
     }
 
     .column{
@@ -860,9 +891,15 @@
     @media screen and (min-width: 1200px) {
         width: 31.3%;
         margin: 0 3% 3% 0;
+        padding: 2rem;
 
         &:nth-child(3n){
             margin: 0 0 3% 0;
+        }
+
+        h2{
+            font-size: 24px;
+            line-height: 37px;
         }
     } 
 }
@@ -976,6 +1013,15 @@
             }
         }
     }
+
+    @media screen and (max-width: 768px) {
+        flex-flow: column;
+        align-items: flex-start;
+
+        .box:nth-child(2){
+            margin: 1rem 0 0;
+        }
+    }
 }
 
 .card-quotation{
@@ -998,7 +1044,7 @@
     }
 
     .check-box {
-        transform: scale(0.5) translateX(-70px);
+        transform: scale(0.5) translateX(calc(100% - 149%));
 
         input[type="checkbox"] {
             position: relative;
@@ -1045,6 +1091,10 @@
             &:nth-child(7){  width: 31.3% !important; }
             &:nth-child(8){  width: 100% !important; }
         }
+
+        .check-box{
+            transform: scale(0.5) translateX(-70px);
+        }
     }
 }
 
@@ -1065,6 +1115,7 @@ table.dataTable.no-footer{
 .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
     color: inherit;
     margin: 1rem 0 2rem;
+    text-align: left;
 }
 
 .dataTables_wrapper .dataTables_filter input {
@@ -1248,5 +1299,31 @@ table.dataTable.no-footer{
         display: flex;
         align-items: center;
         vertical-align: middle;
+    }
+}
+
+
+.button-add{
+    @media screen and (max-width: 992px) {
+        position: relative;
+        width: 45px;
+        min-width: 45px;
+        max-width: 45px;
+        font-size: 0;
+        overflow: hidden;
+
+        &::after{
+            content: '+';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--yellow-2);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 25px;
+        }
     }
 }
