--- a/resources/scss/show.scss
+++ b/resources/scss/show.scss
@@ -69,6 +69,11 @@
 	display: flex;
 	padding: 0 1.5rem;
 	border-bottom: 1px solid var(--border-card-color);
+
+    @media screen and (max-width: 768px) {
+        flex-flow: column;
+	    padding: 1rem 1rem;
+    }
 }
 
 .tab-link {
@@ -88,6 +93,16 @@
     &.active{
         color: var(--yellow-2);
         border-bottom: 3px solid var(--yellow-2);
+    }
+
+    @media screen and (max-width: 768px) {
+        height: 45px;
+
+        &.active{
+            border-radius: 8px;
+            color: var(--white);
+            background-color: var(--yellow-2);
+        }
     }
 }
 
@@ -273,7 +288,7 @@
     }
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 600px) {
     .table-small{
         display: inline-table;
     }
@@ -1126,6 +1141,12 @@ table.dataTable.no-footer{
     margin-left: 1rem;
     width: 350px;
     height: 45px;
+
+    @media screen and (max-width: 500px) {
+        width: 100%;
+        height: 45px;
+        margin: 1rem 0 0;
+    }
 }
 
 .dataTables_wrapper .dataTables_length select {
